  * distances.contact_matrix(): changed keyword 'suppress_progmet' to
    'quiet'
  * Moved MDAnalysis.KDTree to MDAnalysis.lib.KDTree (Issue #287)
  * Moved MDAnalysis.core.transformations to MDAnalysis.lib.transformations
    (Issue #287)
  * base.Reader now defines __iter__
  * __iter__ removed from many Readers (now use base.Reader implementation)

  Fixes
  * ChainReaders no longer leak (Issue #312)
  * analysis.hbonds.HydrogenBondAnalysis performs a sanity check for
    static selections (Issue #296)
  * Fixed TRZWriter failing when passed a non TRZTimestep (Issue #302)
  * relative imports are now banned in unit testing modules
    (Issue #189)


06/01/15  richardjgowers, caio s. souza, manuel.nuno.melo, orbeckst, 
          sseyler
  * 0.10.0

  Enhancements

  * Improved performance of PDB Reading.  Up to 3x faster. (Issue #212)
  * Added the 'same ... as' selection keyword (Issue #217)
  * Added guess_bonds keyword argument to Universe creation.  This will attempt to
    guess all topology information on Universe creation. (Issue #245)
  * Added guess_bonds method to AtomGroup. (Issue #245)
  * All TopologyObjects (Bond, Angle etc) now have is_guessed attribute
  * TopologyGroup now has alternate constructor method, .from_indices()
  * Added TopologyObject.indices property
  * Amber netCDF4 Reader will now read Forces (Issue #257)
  * Amber netCDF4 Writer will now write Velocities and Forces
  * Added Amber coordinate/restart file reader (Issue #262)
  * Structural superpositions (MDAnalysis.analysis.align) can work
    with partial matches of atoms.
  * new path similarity analysis module MDAnalysis.analysis.psa
  * AtomGroup and TopologyGroup can now be indexed by numpy boolean arrays
    works identically to numpy masks. (Issue #282)

  Changes

  * TopologyGroup can now have zero length, and will evaluate to False
    when empty.
  * Renamed TopologyGroup.dump_contents to "to_indices"